After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759664 - Buttonbox broken in chess promotion dialog
Buttonbox broken in chess promotion dialog
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gnome-chess-maint
Depends on:
Blocks:
 
 
Reported: 2015-12-19 15:08 UTC by Michael Catanzaro
Modified: 2015-12-20 22:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (7.46 KB, image/png)
2015-12-19 23:04 UTC, Michael Catanzaro
Details

Description Michael Catanzaro 2015-12-19 15:08:55 UTC
The buttonbox in the GNOME chess promotion dialog is broken since acd339a9a55f46e098a1e638f866238b6d78daa1

"buttonbox: Convert to gadgets

Set a css name and use a gadget for button box allocation and
drawing."
Comment 1 Matthias Clasen 2015-12-19 22:24:29 UTC
have a screenshot ?
Comment 2 Michael Catanzaro 2015-12-19 23:04:53 UTC
Created attachment 317681 [details]
screenshot

This screenshot only half-captures the issue. The two buttons actually extend outside the astoundingly-small window. The Queen and Bishop buttons (on the ends) have disappeared completely.

Possibly-relevant warning:

(gnome-chess:6475): Gtk-WARNING **: Content added to the action area of a dialog using header bars

(gnome-chess:6475): Gtk-WARNING **: Content added to the action area of a dialog using header bars

(gnome-chess:6475): Gtk-WARNING **: Content added to the action area of a dialog using header bars

(gnome-chess:6475): Gtk-WARNING **: Content added to the action area of a dialog using header bars
Comment 3 Matthias Clasen 2015-12-20 04:31:53 UTC
Do you have a ui file for that dialog ? or how do I get it to show ?
Comment 4 Michael Catanzaro 2015-12-20 06:11:57 UTC
(In reply to Matthias Clasen from comment #3)
> Do you have a ui file for that dialog ? or how do I get it to show ?

Open Chess, go to preferences, switch your opponent to be Human to make testing easy, start a new game so the settings take effect, move pawns across the board. Get a pawn to the final rank on the opposite side of the board and the dialog will appear.

UI file: https://git.gnome.org/browse/gnome-chess/tree/data/promotion-type-selector.ui
Comment 5 Sahil Sareen 2015-12-20 07:51:27 UTC
This might be caused due to a recent upgrade to gtk 3.16:

https://github.com/GNOME/gnome-chess/commit/f01ac8d15423accdca1c7f1cab79695ecc60db3c
---
https://github.com/GNOME/gtk/blob/master/NEWS#L4865
Comment 6 Sahil Sareen 2015-12-20 18:51:37 UTC
Wops, Early comment there!
Michael has already pointed out the commit in gtk in the bug description. :P
Comment 7 Matthias Clasen 2015-12-20 21:42:36 UTC
One way to work aoround this problem in the short term is to set the button box mode to expand.
Comment 8 Matthias Clasen 2015-12-20 21:53:57 UTC
Some fascinating misbehavior found along the way: https://mclasen.fedorapeople.org/bbng.webm