buttonbox: Fix size request

A copy-paste mistake was making us always request too little
space, causing the buttons to be jumbled or cut off.

https://bugzilla.gnome.org/show_bug.cgi?id=759664